deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  namespace: learn05
  labels:
    app: deployment-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-backend
  template:
    metadata:
      labels:
        app: deployment-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
