deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  namespace: learn05
  labels:
    app: deployment-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-frontend
  template:
    metadata:
      labels:
        app: deployment-frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
