svc-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: learn05
spec:
  selector:
    app: deployment-backend
  type: ClusterIP
  ports:
    - name: http-backend
      protocol: TCP
      port: 8080
      targetPort: 8080
