svc-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: learn05
spec:
  selector:
    app: deployment-frontend
  type: ClusterIP
  ports:
    - name: http-frontend
      protocol: TCP
      port: 80
      targetPort: 80
